--- a/components/feature/sitepermissions/src/main/res/values-ja/strings.xml
+++ b/components/feature/sitepermissions/src/main/res/values-ja/strings.xml
@@ -44,4 +44,14 @@
     <string name="mozac_feature_sitepermissions_persistent_storage_title">%1$s に永続ストレージへのデータの格納を許可しますか？</string>
     <!-- Title of a dialog to use EME. %1$s will be replaced with the URL of the current page -->
     <string name="mozac_feature_sitepermissions_media_key_system_access_title">%1$s に DRM 制御されたコンテンツの再生を許可しますか？</string>
+    <!-- Title of a dialog to use cross origin storage permission. %1$s is the name of the site URL (www.site1.example) trying to track the user's activity.
+     %2$s is the name of the site URL (www.site2.example) that the user is visiting.  This is the same domain name displayed in the address bar -->
+    <string name="mozac_feature_sitepermissions_storage_access_title">%2$s で Cookie の利用を %1$s に許可しますか？</string>
+    <!-- Message of a dialog offering more context about the cross origin storage permission.
+    %s is the name of the site URL (www.site1.example) trying to track the user's activity. -->
+    <string name="mozac_feature_sitepermissions_storage_access_message">%s がこのデータを利用する理由が不明な場合は、アクセスのブロックをおすすめします。</string>
+    <!-- Text for a negative button in the storage access permission request dialog. This button will not give access to this permission. -->
+    <string name="mozac_feature_sitepermissions_storage_access_not_allow">ブロック</string>
+    <!-- Clickable text that will open a new tab navigating the user to online documentation about specific features. -->
+    <string name="mozac_feature_sitepermissions_learn_more_title">詳細情報</string>
 </resources>
